--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         </nav>
       </div><!-- end header -->
 
-    <div class="wrapper" style="max-width:70%">
+    <div class="wrapper">
 
       <section>
         <div id="title">
