--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,8 +33,8 @@
 
       <section>
         <div id="title">
-          <h1>{{ page.title | default: site.title }}</h1>
-          <p>{{ page.description | default: site.description }}</p>
+          <h1 id="page title">{{ page.title | default: site.title }}</h1>
+          <p id="page description">{{ page.description | default: site.description }}</p>
           <hr>
           <span class="credits left">Project maintained by <a href="{{ site.github.owner_url }}">{{ site.github.owner_name }}</a></span>
           <span class="credits right">Hosted on GitHub Pages &mdash; Theme by <a href="https://twitter.com/mattgraham">mattgraham</a></span>
