--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,6 @@ code.highlighter-rouge {
     fill: #e8e8e8;
     visibility: hidden;
 }
-a:hover .title-anchor {
+h1:hover .title-anchor, h2:hover .title-anchor, h3:hover .title-anchor, h4:hover .title-anchor, h5:hover .title-anchor, h6:hover .title-anchor {
     visibility: visible;
 }
